[package]
name = "data-web"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.3", features = ["dynamic-schema"] }
async-graphql-axum = "7.0.3"
axum = "0.7.4"
reqwest = { version = "0.11.24", features = ["json", "cookies"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
